--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </p>
 
 
-<img src="https://github.com/geesun56/WEB/blob/master/internet.PNG" style="margin-top:30px">
+<img src="internet.PNG" style="margin-top:30px">
 
 <p style="margin-bottom:30px">
 	<ul style ="margin-top:30px">
